--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ indicatif = "0.16"
 serde_json = "1.0.120"
 chrono = "0.4.38"
 serde = { version = "1.0.204", features = ["derive"] }
+dotenv = "0.15.0"
