--- a/git-moose/Cargo.toml
+++ b/git-moose/Cargo.toml
@@ -11,3 +11,7 @@ serde_json = "1.0.120"
 chrono = "0.4.38"
 serde = { version = "1.0.204", features = ["derive"] }
 dotenv = "0.15.0"
+
+#Database depencies
+diesel = { version = "2.2.0", features = ["postgres"] }
+dotenvy = "0.15"
